--- a/app/views/shared/_sign_in_form.html.erb
+++ b/app/views/shared/_sign_in_form.html.erb
@@ -1,31 +1,41 @@
 <%= form_for resource, as: 'user', namespace: 'signin', url: user_session_path, html: {id: "sign_in_form"} do |f| %>
-  <div class="form-control mb-3">
-    <%= f.label(:email, _('Email'), class: 'form-label') %>
-    <%= f.email_field(:email, class: 'form-control', "aria-required": true) %>
+  <div class="form rm-form-row">
+    <div class="col-12">
+      <%= f.label(:email, _('Email'), class: 'form-label') %>
+      <%= f.email_field(:email, class: 'form-control', "aria-required": true) %>
+    </div>
   </div>
-  <div class="form-control mb-3">
-    <%= f.label(:password, _('Password'), class: 'form-label') %>
-    <%= f.password_field(:password, class: 'form-control', "aria-required": true) %>
+  <div class="form rm-form-row">
+    <div class="col-12">
+      <%= f.label(:password, _('Password'), class: 'form-label') %>
+      <%= f.password_field(:password, class: 'form-control', "aria-required": true) %>
+    </div>
   </div>
-  <div>
-    <%= link_to _('Forgot password?'), new_password_path('user') %>
+  <div class="form rm-form-row">
+    <div class="col-12">
+      <%= link_to _('Forgot password?'), new_password_path('user') %>
+    </div>
   </div>
-  <div class="form-check mb-3">
-    <%= label_tag 'remember_email', class: 'form-check-label' do %>
-      <%= check_box_tag 'remember_email' %>
-      <%= _('Remember email') %>
-    <% end %>
+  <div class="form rm-form-row">
+    <div class="col-12 form-check">
+      <%= label_tag 'remember_email', class: 'form-check-label' do %>
+        <%= check_box_tag 'remember_email', class: 'form-check-input' %>
+        <%= _('Remember email') %>
+      <% end %>
+    </div>
   </div>
-  <%= f.button(_('Sign in'), class: "btn btn-secondary", type: "submit") %>
-
+  <div class="form rm-form-row">
+    <div class="col-12">
+      <%= f.button(_('Sign in'), class: "btn btn-secondary", type: "submit") %>
+    </div>
+  </div>
   <% if Rails.configuration.x.shibboleth.enabled %>
     <% if session['devise.shibboleth_data'].nil? %>
-      <p class="text-center fontsize-h4">- <%= _('or') %> -</p>
-      <div class="form-control mb-3">
-        <span class="d-grid">
+      <div class="form rm-form-row">
+        <div class="col-12">
           <% target = (Rails.configuration.x.shibboleth.use_filtered_discovery_service ? shibboleth_ds_path : user_shibboleth_omniauth_authorize_path) %>
           <%= link_to _('Sign in with your institutional credentials'), target, method: :post, class: 'btn btn-secondary' %>
-        </span>
+        </div>
       </div>
     <% else %>
       <%= f.hidden_field :shibboleth_id, :value => session['devise.shibboleth_data']['uid'] %>
