Updated select input in create form. If there is one org then it it automatically selected. If there is no org returned we do not show prompt. If there is more than one org we have propmt with text "Select an organisation".

--- a/app/views/shared/_create_account_form.html.erb
+++ b/app/views/shared/_create_account_form.html.erb
@@ -23,7 +23,7 @@
   <div class="form rm-form-row">
     <div class="col-12" id="create-account-org-controls">
       <%= f.label(:org_name, _('Organisation'), class: "form-label") %>
-      <%= f.select(:org_id, [], { prompt: _('Select an organisation') }, { class: "form-control" }) %>
+      <%= f.select(:org_id, [], { prompt: '' }, { class: "form-control" }) %>
     </div>
   </div>
 
