--- a/app/views/answers/_locking.html.erb
+++ b/app/views/answers/_locking.html.erb
@@ -1,5 +1,5 @@
 <!--
-  This partial displays when a question was edit by two or more users. The local variables are: answer, question, readonly, locking
+  TEST This partial displays when a question was edit by two or more users. The local variables are: answer, question, readonly, locking
 -->
 <div class="answer_notice">
     <p><%= _('The following answer cannot be saved') %></p>
