--- a/app/views/answers/_new_edit.html.erb
+++ b/app/views/answers/_new_edit.html.erb
@@ -1,6 +1,6 @@
 <%# locals: { template, question, answer, readonly, locking } %>
 <!--
-  This partial creates a form for each type of question. The local variables are: plan, answer, question, readonly
+  TEST This partial creates a form for each type of question. The local variables are: plan, answer, question, readonly
 -->
 <!-- Question text -->
 <% q_format = question.question_format %>
