--- a/app/views/org_domain/show.html.erb
+++ b/app/views/org_domain/show.html.erb
@@ -17,7 +17,20 @@
           <td><%= domain.created_at.strftime("%Y-%m-%d %H:%M:%S") %></td>
           <td><%= domain.updated_at.strftime("%Y-%m-%d %H:%M:%S") %></td>
           <td>
-            <%= link_to 'Edit', edit_org_domain_path(domain), class: "btn btn-primary" %>
+            <div class="dropdown">
+              <button class="btn btn-link dropdown-toggle" type="button" id="actionsDropdown<%= domain.id %>" data-bs-toggle="dropdown" aria-expanded="false">
+                Select an action
+              </button>
+              <ul class="dropdown-menu" aria-labelledby="actionsDropdown<%= domain.id %>">
+                <li><%= link_to 'Edit', edit_org_domain_path(domain), class: "dropdown-item" %></li>
+                <li>
+                  <%= link_to 'Delete', org_domain_path(domain), 
+                              method: :delete, 
+                              data: { confirm: 'Are you sure you want to delete this domain?' }, 
+                              class: "dropdown-item text-danger" %>
+                </li>
+              </ul>
+            </div>
           </td>
         </tr>
       <% end %>
