--- a/app/views/layouts/_branding.html.erb
+++ b/app/views/layouts/_branding.html.erb
@@ -98,7 +98,7 @@
                     </li>
                 <% end %>
               <% end %>
-              <% if current_user.can_org_admin? %>   
+              <% if current_user.can_org_admin? && !current_user.can_super_admin? %>   
                     <li class="nav-item <%= 'class=active' if active_page?(org_domain_show_path) %>">
                       <%= link_to _('Organisation domains'), org_domain_show_path, class: 'nav-link dropdown-item  px-3' %>
                     </li>
