--- a/app/views/shared/_create_account_form.html.erb
+++ b/app/views/shared/_create_account_form.html.erb
@@ -27,7 +27,7 @@
   </div>
   <div class="form-control mb-3">
     <div class="form-check">
-        <input type="checkbox" id="passwords_toggle_sign_up" class="passwords_toggle" />
+        <input type="checkbox" id="passwords_toggle_sign_up" class="passwords_toggle" value="1" />
         <%= label_tag('passwords_toggle_sign_up', _('Show password'), class: 'form-check-label') %>
     </div>
   </div>
